deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crccheck01-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crccheck01-dev
  template:
    metadata:
      labels:
        app: crccheck01-dev
    spec:
      containers:
        - name: crccheck01-dev
          image: crccheck/hello-world:latest
          ports:
            - containerPort: 4041
            - containerPort: 8000
            - containerPort: 8080
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
