service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crccheck01-dev-service
spec:
  selector:
    app: crccheck01-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
