ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crcc-check-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host: crcc-check-dev.bam-gis.arctic.bamdns.local
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: crcc-check-dev-service
                port:
                  number: 80
